feature/L01-197: added phoneNumber into User, added registration for User with Admin role (#59)